// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups: (excludeGroups=false) should render group TOC' 1`] = `
"## Index

### Enumerations

- [EnumA](API.md#enuma)
- [EnumB](API.md#enumb)

### Classes

- [ClassA](API.md#classa)
- [ClassB](API.md#classb)

### Interfaces

- [InterfaceA](API.md#interfacea)
- [InterfaceB](API.md#interfaceb)

### Type Aliases

- [typeA](API.md#typea)
- [typeB](API.md#typeb)

### Variables

- [variableA](API.md#variablea)
- [variableB](API.md#variableb)

### Functions

- [functionA](API.md#functiona)
- [functionB](API.md#functionb)
"
`;

exports[`Groups: (excludeGroups=false) should render group members' 1`] = `
"## Enumerations

### EnumA

[partial: reflectionMember]



---

### EnumB

[partial: reflectionMember]

## Classes

### ClassA

[partial: reflectionMember]



---

### ClassB

[partial: reflectionMember]

## Interfaces

### InterfaceA

[partial: reflectionMember]



---

### InterfaceB

[partial: reflectionMember]

## Type Aliases

### typeA

[partial: declarationMember]



---

### typeB

[partial: declarationMember]

## Variables

### variableA

[partial: declarationMember]



---

### variableB

[partial: declarationMember]

## Functions

### functionA()

[partial: signatureMember]



---

### functionB()

[partial: signatureMember]"
`;

exports[`Groups: (excludeGroups=true) should render group TOC' 1`] = `
"## Index

- [EnumA](API.md#enuma)
- [EnumB](API.md#enumb)
- [ClassA](API.md#classa)
- [ClassB](API.md#classb)
- [InterfaceA](API.md#interfacea)
- [InterfaceB](API.md#interfaceb)
- [typeA](API.md#typea)
- [typeB](API.md#typeb)
- [variableA](API.md#variablea)
- [variableB](API.md#variableb)
- [functionA](API.md#functiona)
- [functionB](API.md#functionb)
"
`;

exports[`Groups: (excludeGroups=true) should render group members' 1`] = `
"## EnumA

[partial: reflectionMember]



---

## EnumB

[partial: reflectionMember]



---

## ClassA

[partial: reflectionMember]



---

## ClassB

[partial: reflectionMember]



---

## InterfaceA

[partial: reflectionMember]



---

## InterfaceB

[partial: reflectionMember]



---

## typeA

[partial: declarationMember]



---

## typeB

[partial: declarationMember]



---

## variableA

[partial: declarationMember]



---

## variableB

[partial: declarationMember]



---

## functionA()

[partial: signatureMember]



---

## functionB()

[partial: signatureMember]"
`;
